--- a/history.html
+++ b/history.html
@@ -55,14 +55,10 @@
 				
 	</header>
 	<div class='content'>
-		<div class="slider-wrapper theme-default">
-			<div class='ribbon'></div>
-		    <div id="slider" class="nivoSlider">
-		        <img src="images/group5.jpeg" alt="" />
-		        <img src="images/group6.jpeg" alt="" />
-		        <img src="images/group2.jpeg" alt="" />
-		        <img src="images/group7.jpeg" alt="" />
-		    </div>
+		<div class='history-pics'>
+			<img src='images/group1.jpeg'>
+			<img src='images/group2.jpeg'>
+			<img src='images/group3.jpeg'>
 		</div>
 		
 		<div class=history>
