--- a/members.html
+++ b/members.html
@@ -33,12 +33,23 @@
 	    });
 	});
 	</script>
+	
+	<script type='text/javascript'>
+	$(window).scroll(function(e){ 
+	  $el = $('#primary'); 
+	  if ($(this).scrollTop() > 180 && $el.css('position') != 'fixed'){ 
+	    $('#primary').css({'position': 'fixed', 'top': '0px', 'left':'50%', 'margin-left':'-510px'}); 
+	  };
+	  if ($(this).scrollTop() < 180 && $el.css('position') == 'fixed') { $('#primary').css({'position': 'static', 'top': '0px', 'margin':'auto'}); }
+	});
+	</script>
 		
 </head>
 	
 <body>
 
 <div class='header-bg'></div>
+<div class='header-bg-small'></div>
 <div class='container'>
 	<header>
 		<a class="logo" href="/"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
