--- a/members.html
+++ b/members.html
@@ -23,12 +23,18 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
 	
+	
+	<!-- Add fancyBox -->
+	<link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.0" type="text/css" media="screen" />
+	<script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.0"></script>
+	
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$(".fancybox").fancybox();
 		});
 	</script>
 	
+	<!-- sticky nav -->
 	<script type='text/javascript'>
 	$(window).scroll(function(e){ 
 	  $el = $('#primary'); 
@@ -39,6 +45,7 @@
 	});
 	</script>
 	
+	<!-- color change/name popup -->
 	<script>
 		$(document).ready(function(e) {
 			$('.individual').hover(function() {
@@ -80,7 +87,7 @@
 						<div class="individual">
 							<img src='images/members/Annie_bw.jpeg'>
 							<img class='color' style='display:none;' src='images/members/Annie.jpeg'>
-							<div class="name" ><p>Annie Rendall '13</p></div>
+							<div class="name" ><p>Annie Rendall '13<br><span>President</span></p></div>
 						</div>
 					</a>		
 				
@@ -182,16 +189,89 @@
 <div class='end'>We who believe in freedom cannot rest.</div>
 <div class='footer-bg'></div>
 
-<div id="Annie" class="fancymembers" style="width:530px;display: none;">
+<div id="Annie" class="fancymembers" style="width:600px;display: none;">
 	<img alt="Annie" src="images/members/Annie.jpeg" align="right"/>
-	<h3>Joey Killian '13</h3>
+	<h3>Annie "Gondi" Rendall '13</h3>
 	<h4>President</h4>
-	<ul>
-		<li><span>Major:</span> Chemistry</li>
-		<li><span>Hometown:</span> Oakmont, PA</li>
-		<li><span>Voice part:</span> Tenor</li>
-	</ul>
-	<p>When not watching his limited edition Star Wars Blurays, Joey can be found eating cereal and reading every article on the internet having to do with Apple. He does not like country music.</p>
+	<p>Annie Rendall hails from South Burlington, Vermont where she grew up skiing in the Green Mountains, swimming in Lake Champlain, and singing with her high school jazz band on Church Street. If you are currently looking for Annie your best bet is to check Rocks rehearsal at the Hop, the Dartmouth Skiway, or the Moore Psychology Building. In addition to the Rocks, Annie is a member of the Women's Alpine Ski
+	Team, and has a major in psychology. Through the amazingly empowered group of women that make up the Rockapellas, Annie has met some of her best friends and has realized her passion for social justice. She is unsure of what she wants to do after college, but knows that music will always be a huge part of her life!</p>
+</div>
+
+<div id="Maia" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Maia" src="images/members/Maia.jpeg" align="right"/>
+	<h3>Maia "Trex" Matsushita '13</h3>
+	<br>
+	<p>Maia was born in Brooklyn, NY and grew up in White Plains, NY. She loves to sing, read, and watch bad television. She is contemplating a major in Anthropology, but is still totally undecided. She plans on going on the Greek Classics FSP next year, and spends most of her time watching Brat Pack movies and eating Indian, Italian, or Japanese food.</p>
+</div>
+
+<div id="Reese" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Reese" src="images/members/Reese.jpeg" align="right"/>
+	<h3>Reese "Mo" Ramponi '13</h3>
+	<h4>Musical Director '12-'13</h4>
+	<p>Reese hails from Soldotna, Alaska and enjoys singing, snowboarding, clothing in exciting colors, mangoes, and yams. She is a religion and psychology double major. Apart from the Rocks, Reese is in Sigma Delta sorority, writes for the Dartmouth Mirror, and is in a band. When she's not singing, she's most likely hiking or making collages.</p>
+</div>
+
+<div id="Ali" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Ali" src="images/members/Ali.jpeg" align="right"/>
+	<h3>Ali "Frex" Oberg '13</h3>
+	<h4>Tour Manager</h4>
+	<p>Ali Oberg is a native of Wellesley, Massachusetts. She enjoys hiking and fancies herself a free-spirited outdoorswoman. She gets giddy at any mention of *NSYNC or green Mint Chocolate Chip ice cream. You might find her eating eggo waffles, La Riviera tuna salad or binge watching late-night Rocket Power or Fresh Prince of Bel-Air reruns. Her hobbies include, but are not limited to, tie dying, spooning, scaling rock faces, collecting lawn ornaments and streaking.</p>
+</div>
+
+<div id="Anoush" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Anoush" src="images/members/Anoush.jpeg" align="right"/>
+	<h3>Anoush "Rizz" Arakelian '14</h3>
+	<h4>Business Manager</h4>
+	<p>Anoush grew up in Bedford, MA to a loud and proud Armenian family. OOPA! Besides singing with the Rockapellas, she also works for the Office of Residential Life per bequest from half the Rockapella family, is in the Hill Winds Society, and plays on the rugby team - tackling is freedomy. Her hobbies involve singing in the shower, singing while running, singing in the car, singing in her room, singing with the Rockapellas, and snuggling. She is a Neuroscience major, Theater minor, and is getting her teaching certification through the college.</p>
+</div>
+
+<div id="Steffi" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Steffi" src="images/members/Steffi.jpeg" align="right"/>
+	<h3>Steffi "Peeps" Ostrowski '14</h3>
+	<br>
+	<p>Steffi was born and raised in Oakmont, PA, where she got her first taste of the spotlight as Jonah in her church's musical rendition of "Jonah and the Whale." She is a computer science and philosophy double major. When she's not singing, you can find Steffi reading, watching sitcoms, or eating nutella.</p>
+</div>
+
+<div id="Crystal" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Crystal" src="images/members/Crystal.jpeg" align="right"/>
+	<h3>Crystal "Manto" Ye '14</h3>
+	<br>
+	<p>Crystal Ye is a proud member of the Rockapellas and espouses freedom from injustice, freedom from opression, and freedom from pants. She is a Linguistics and Mathematical Social Sciences double major. Home is sleepy suburban Malvern, Pennsylvania - but everybody knows her real home is the Rocks. She enjoys baking cookies, really terrible puns(they must be terrible to be amusing e.g. what's orange and sounds like a parrot? a carrot!), punky hair, biking in short skirts, and imitating an instrument for 6+ hours every week.</p>
+</div>
+
+<div id="Vicky" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Vicky" src="images/members/Vicky.jpeg" align="right"/>
+	<h3>Vicky "Misi" Stein '14</h3>
+	<br>
+	<p>Vicky Stein is so Californian that it's almost absurd- she literally hugs trees, reads the New York Times, and pines (or redwoods, ha ha) for the Pacific Ocean while she's in New Hampshire. She is majoring in Biology focused in Ecology, and works at the Donald Claflin Jewelry Shop at Dartmouth. The Rockapellas are the main reason she can survive the weather in New England.</p>
+</div>
+
+<div id="Emma" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Emma" src="images/members/Emma.jpeg" align="right"/>
+	<h3>Emma "Steak" Orme '15</h3>
+	<h4>Assistant Business Manager</h4>
+	<p>A Brooklynite through and through, Emma Orme clearly spends most of her time riding her fixed geared bike while listening to NPR. When she’s not pretending to be a hipster, however, she’s most likely busy singing or pumping iron in hopes of someday living up to her rocks nickname. Emma enjoys all things hazelnut and harmonized, and if you really want to warm up to her, she’s always down for a good cuddle.</p>
+</div>
+
+<div id="Jamie" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Jamie" src="images/members/Jamie.jpeg" align="right"/>
+	<h3>Jamie "Mater" Mercado '15</h3>
+	<br>
+	<p>Jamie Mercado is a food enthusiast (despite her many allergies) from Fairfield, Connecticut. She cannot whistle or do a satisfactory cartwheel. As a child, she was deprived and did not watch any television or movies that were not sports-related, and as a result, she receives many looks of horror each day when people find out that she has not yet seen The Lion King in its entirety. She has played ninja at the Louvre and under the Eiffel Tower. She knows all the words to the Kim Possible theme song, but only in French, and will serenade you, always with a poor accent, upon request. While she waits to figure out where her life is headed, she masquerades as a Dartmouth student, studying tantalizing stuff and transcendental things. Unless you have a plethora of time, do not ask her to name her favorite band, because she will begin to list at least twenty groups you've never heard of, and they'll be different every time you query. She has been known to sporadically burst into song for no reason at all, so don't be surprised if that's a thing that happens.</p>
+</div>
+
+<div id="Meredith" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Meredith" src="images/members/Meredith.jpeg" align="right"/>
+	<h3>Meredith "Ozzy" Shaw '15</h3>
+	<br>
+	<p>Meredith was born and raised in the suburbs of Chicago, IL. She loves to sing (surprised?!), spin, eat chicken nuggets, and hug anyone and everyone. If someone would like to explain to her exactly what Linguistics is, she might know her future major. Meredith is beyond excited to join the Rockapellas family!</p>
+</div>
+
+<div id="Charli" class="fancymembers" style="width:600px;display: none;">
+	<img alt="Charli" src="images/members/Charli.jpeg" align="right"/>
+	<h3>Charli "Hoox" Fool Bear '15</h3>
+	<br>
+	<p>Charli is from good ol’ North Dakota, where she lived on the Standing Rock Sioux Reservation. She likes food (like pizza and popcorn,) nice people, beach balls, musicals, and obnoxious hair colors. A Harry Potter fanatic and a lazy bum, she can often be found laying on her beloved bed in The River (stay classy), yelling ‘Accio!’ at objects no more than four feet away from her. She wants to major in government and English with a possible minor in Woman and Gender Studies. She’s also positive she's a Hufflepuff and Lady Gaga’s long-lost sister. Charli is addicted to slushies and any variation of them.</p>
 </div>
 	
 </body>
