--- a/members.html
+++ b/members.html
@@ -87,7 +87,7 @@
 						<div class="individual">
 							<img src='images/members/Annie_bw.jpeg'>
 							<img class='color' style='display:none;' src='images/members/Annie.jpeg'>
-							<div class="name" ><p>Annie Rendall '13<br><span>President</span></p></div>
+							<div class="name" style='display: none;'><p>Annie Rendall '13<br><span>President</span></p></div>
 						</div>
 					</a>		
 				
