--- a/history.html
+++ b/history.html
@@ -67,29 +67,28 @@
 	</header>
 	<div class='content'>
 		<div class='history-pics'>
-			<img src='images/group1.jpeg'>
-			<img src='images/group2.jpeg'>
-			<img src='images/group3.jpeg'>
+			<img src='images/history1.jpeg'>
+			<img src='images/history3.jpeg'>
+			<img src='images/history2.jpeg'>
 		</div>
 		
 		<div class=history>
 			<section>
 				<h1>In The Beginning...</h1>
 				<p>The Rockapellas got their start in 1988 when two freshwomen felt a void in their lives. They found a lack of musical bonding for women and sought a new creative outlet for their talents and passions. These women therefore swallowed the lumps in their throats and reserved a room in the Music Department one blustery night in October-- those few hours of inspired singing marked the birth of the Rockapellas. Following a term of practice, the Rocks performed their first show at the Fayerweather dormitory on February 7th, 1989. The Rocks immediately became the a cappella group enabling women to express their views and passions both musically and politically.</p>
-			</section>
-			
-			<section>
 				<h1>The Rocks Now</h1>
 				<p>In our 24th year, the Rockapellas consists of 17 members from all different backgrounds, majors, and walks of life. The Rocks continue to provide a supportive environment for women who are dedicated to entertaining the Dartmouth community and who want to spread awareness of social and political issues. We have performed and toured across the country and are proud to arrange all our own music. Auditions are held every fall.</p>
 			</section>
-			
-			<section id='freedom_songs'>
-				<h1>Freedom Songs</h1>
-				<p>The first song in the Rockapellas repertoire was "Oh Freedom"; the song symbolizes our determination, our diversity, and our will to make the Rocks a vehicle for social thought as well as entertainment. "Oh Freedom" has become a private song within the group, as we continue to incorporate other songs that not only reflect our original purpose, but makes the Rocks a unique a cappella group here at Dartmouth. Though we sing a wide variety of music, Freedom Songs bear the most meaning to us, and we include a few in every set we sing.</p>
-			</section>
 		</div>
 		
+		<div id='space'></div>
+		
+		<div id='freedom_songs'>
+			<h1>Freedom Songs</h1>
+			<p>The first song in the Rockapellas repertoire was "Oh Freedom"; the song symbolizes our determination, our diversity, and our will to make the Rocks a vehicle for social thought as well as entertainment. "Oh Freedom" has become a private song within the group, as we continue to incorporate other songs that not only reflect our original purpose, but makes the Rocks a unique a cappella group here at Dartmouth. Though we sing a wide variety of music, Freedom Songs bear the most meaning to us, and we include a few in every set we sing.</p>
+		</div>
 	</div>	
+	
 <footer>
 	<div class='clear'></div>
 </footer>
