--- a/videos.html
+++ b/videos.html
@@ -73,10 +73,72 @@
 		</div>
 		
 
+		<ul id='video_container'>
+			<li class='video'>
+				<section class='text'>
+				<h1> Feeling Good</h1>
+				<h2> Winter 2011 </h2>
+				<h3> <span>Soloist:</span> Joey Killian '13 </h3>
+				<h3> <span>Arranged By: </span> Preston Grover '13</h3>
+				</section>
+				<iframe width="450" height="350" src="https://www.youtube.com/embed/_Rmihyt3Xgo" frameborder="0" allowfullscreen></iframe>
+			</li> 
 			
-		
+			<li class='video'>
+				<section class='text'>
+				<h1> Without You / We Found Love</h1>
+				<h2> Spring 2012 </h2>
+				<h3> <span>Soloist:</span> Dylan Jarrett '14 and Kelsey Oostdyk '12 </h3>
+				<h3> <span>Arranged By: </span>Dylan Jarrett '14</h3>
+				</section>
+				<iframe width="450" height="350" src="https://www.youtube.com/embed/xZEt_l46cgw" frameborder="0" allowfullscreen></iframe>
+			</li> 
+			
+			<li class='video'>
+				<section class='text'>
+				<h1> Samson</h1>
+				<h2> Winter 2011 </h2>
+				<h3> <span>Soloist:</span> Sarah Hanson '12</h3>
+				<h3> <span>Arranged By: </span>Chad Cone</h3>
+				</section>
+				<iframe width="450" height="350" src="https://www.youtube.com/embed/GfBokmc7H4s" frameborder="0" allowfullscreen></iframe>
+			</li> 
+			
+			<li class='video'>
+				<section class='text'>
+				<h1> Speechless</h1>
+				<h2> Winter 2011 </h2>
+				<h3> <span>Soloist:</span> Kate Gard '14 </h3>
+				<h3> <span>Arranged By: </span>Preston Grover '13</h3>
+				</section>
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/aJyho-lhUDQ" frameborder="0" allowfullscreen></iframe>
+			</li> 
+			
+			<li class='video'>
+				<section class='text'>
+				<h1> Closing Time</h1>
+				<h2> Spring 2012 </h2>
+				<h3> <span>Soloist:</span> 2012 Seniors  </h3>
+				<h3> <span>Arranged By: </span>Dylan Richards '12</h3>
+				</section>
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/nq2xX8c7Hu0" frameborder="0" allowfullscreen></iframe>
+			</li> 
+			
+			<li class='video'>
+				<section class='text'>
+				<h1> Bright Lights</h1>
+				<h2> Spring 2012 </h2>
+				<h3> <span>Soloist:</span> Preston Grover '13  </h3>
+				<h3> <span>Arranged By: </span>Preston Grover '13</h3>
+				</section>
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/videoseries?index=1&amp;list=PL9DFA7BB48DD0FE0F&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
+			</li> 
+			
+			
+			</ul>	
 		
 		<div id='space'></div>
+		<div id='more'><a href='#'>Check out more videos on our YouTube channel!</a></div>
 		
 	</div>	
 	
