--- a/videos.html
+++ b/videos.html
@@ -79,7 +79,6 @@
 				<h1> Ella's Song</h1>
 				<h2> Winter Tour 2012 </h2>
 				<br>
-				<br>
 				</section>
 				<iframe width="450" height="350" src="http://www.youtube.com/embed/fDv84OviVjM?list=PL4BAF7EC524048646&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>			
 			</li> 
@@ -89,9 +88,8 @@
 				<h1> Replay</h1>
 				<h2> Winter 2012 </h2>
 				<h3> <span>Soloist:</span> Annie Rendall '13 </h3>
-				<br>
 				</section>
-				<iframe width="450" height="350" src="http://www.youtube.com/embed/ISMHWIHUnkM?list=PL4BAF7EC524048646&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/ISMHWIHUnkM" frameborder="0" allowfullscreen></iframe>
 			</li> 
 			
 			<li class='video'>
@@ -101,7 +99,7 @@
 				<h3> <span>Soloist:</span> Emma Orme '15</h3>
 				<h3> <span>Arranged By: </span>Jamie Mercado '15</h3>
 				</section>
-				<iframe width="450" height="350" src="http://www.youtube.com/embed/FEwfbjCq9G8?list=PL4BAF7EC524048646&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/FEwfbjCq9G8" frameborder="0" allowfullscreen></iframe>
 			</li> 
 			
 			<li class='video'>
@@ -111,7 +109,7 @@
 				<h3> <span>Soloist:</span> Meera Krishna '11 </h3>
 				<br>
 				</section>
-				<iframe width="450" height="350" src="http://www.youtube.com/embed/Pd4NRVAW3mk?list=PL4BAF7EC524048646&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/Pd4NRVAW3mk" frameborder="0" allowfullscreen></iframe>
 			</li> 
 			
 			<li class='video'>
@@ -119,9 +117,8 @@
 				<h1> Bury My Heart At Wounded Knee</h1>
 				<h2> Winter 2011 </h2>
 				<br>
-				<br>
 				</section>
-				<iframe width="450" height="350" src="http://www.youtube.com/embed/nq2xX8c7Hu0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/K_Iw3wTaqM4" frameborder="0" allowfullscreen></iframe>
 			</li> 
 			
 			<li class='video'>
@@ -129,9 +126,8 @@
 				<h1> Fix You</h1>
 				<h2> Winter 2012 </h2>
 				<h3> <span>Soloist:</span> Meredith Shaw '15  </h3>
-				<br>
 				</section>
-				<iframe width="450" height="350" src="http://www.youtube.com/embed/4ZFkIn4_saI?list=PL4BAF7EC524048646&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/4ZFkIn4_saI" frameborder="0" allowfullscreen></iframe>
 			</li> 
 			
 			
