--- a/members.html
+++ b/members.html
@@ -65,6 +65,14 @@
 <div class='header-bg'></div>
 <div class='header-bg-small'></div>
 <div class='container'>
+
+	<div id='social'>
+		<h1>Find us on:</h1>
+		<a href='https://www.facebook.com/pages/Dartmouth-Rockapellas/130681392191s' target='_blank'><img src='images/Facebook.png'></a>
+		<a href='https://twitter.com/Rockapellas' target='_blank'><img src='images/Twitter.png'></a>
+		<a href='http://www.youtube.com/user/DartmouthRockapellas' target='_blank'><img src='images/Youtube.png'></a>
+	</div>
+
 	<header>
 		<a class="logo" href="/"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
 		<nav id='primary'>
