--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 <div class='header-bg'></div>
 <div class='header-bg-small'></div>
 <div class='container'>
+	
+	<div id='social'>
+		<h1>Find us on:</h1>
+		<a href='https://www.facebook.com/pages/Dartmouth-Rockapellas/130681392191s' target='_blank'><img src='images/Facebook.png'></a>
+		<a href='https://twitter.com/Rockapellas' target='_blank'><img src='images/Twitter.png'></a>
+		<a href='http://www.youtube.com/user/DartmouthRockapellas' target='_blank'><img src='images/Youtube.png'></a>
+	</div>
+	
 	<header>
 		<a class="logo" href="/"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
 		<nav id='primary'>
@@ -67,14 +75,17 @@
 		</nav>
 				
 	</header>
+	
+	
 	<div class='content'>
 		<div class="slider-wrapper theme-default">
 			<div class='ribbon'></div>
 		    <div id="slider" class="nivoSlider">
-		        <img src="images/group5.jpeg" alt="" />
-		        <img src="images/group6.jpeg" alt="" />
-		        <img src="images/group2.jpeg" alt="" />
 		        <img src="images/group7.jpeg" alt="" />
+		        <img src="images/group8.jpeg" alt="" />
+		        <img src="images/group9.jpeg" alt="" />
+		        <img src="images/group4.jpeg" alt="" />
+		        <img src="images/group2.jpeg" alt="" />
 		    </div>
 		</div>
 		
@@ -103,7 +114,7 @@
 			<section id='cd'>
 				<h1>Live Free</h1>
 				<img src='images/albums/livefree.jpeg' alt='Live Free'>
-				<p><a href='#'>Click here</a> to purchase Live Free, our newest album!</a></p>
+				<p><a href='mailto:rockapellas@dartmouth.edu'>Email us</a> to purchase Live Free, our newest album!</a></p>
 			</section>
 			
 		</div>
@@ -124,7 +135,7 @@
 					<li>Sing at the opening of a new hospital wing outfitted by GE </li>
 					<li>Perform at rural schools along a four-night trek</li>
 				</ul>
-				<p>We would really appreciate any and all support from family and friends.<br><a href='#'>Donations can be made here.</a></p>
+				<p>We would really appreciate any and all support from family and friends.<br><a href='https://www.facebook.com/pages/Dartmouth-Rockapellas/130681392191?ref=ts&sk=app_117708921611213'>Donations can be made here.</a></p>
 				
 			</section>
 		</div>
