--- a/videos.html
+++ b/videos.html
@@ -51,6 +51,14 @@
 <div class='header-bg'></div>
 <div class='header-bg-small'></div>
 <div class='container'>
+
+	<div id='social'>
+		<h1>Find us on:</h1>
+		<a href='https://www.facebook.com/pages/Dartmouth-Rockapellas/130681392191s' target='_blank'><img src='images/Facebook.png'></a>
+		<a href='https://twitter.com/Rockapellas' target='_blank'><img src='images/Twitter.png'></a>
+		<a href='http://www.youtube.com/user/DartmouthRockapellas' target='_blank'><img src='images/Youtube.png'></a>
+	</div>
+
 	<header>
 		<a class="logo" href="/"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
 		<nav id='primary'>
@@ -67,9 +75,9 @@
 	</header>
 	<div class='content'>
 		<div class='history-pics'>
-			<img src='images/history1.jpeg'>
-			<img src='images/history3.jpeg'>
-			<img src='images/history2.jpeg'>
+			<img src='images/music1.jpeg'>
+			<img src='images/music3.jpeg'>
+			<img src='images/music2.jpeg'>
 		</div>
 		
 
