--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<li>Sing at the opening of a new hospital wing outfitted by GE </li>
 					<li>Perform at rural schools along a four-night trek</li>
 				</ul>
-				<p>We would really appreciate any and all support from family and friends.<br><a href='https://www.facebook.com/pages/Dartmouth-Rockapellas/130681392191?ref=ts&sk=app_117708921611213'>Donations can be made here.</a></p>
+				<p>We would really appreciate any and all support from family and friends.<br><a href='https://www.facebook.com/pages/Dartmouth-Rockapellas/130681392191?ref=ts&sk=app_117708921611213' target='_blank'>Donations can be made here.</a></p>
 				
 			</section>
 		</div>
