--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		</div>
 		
 		<div class='about'>
-			<p>Welcome! The Rockapellas are an all-female a capella group from Dartmouth College. Since 1989, the Rocks have entertained audiences with our exciting repertoire of popular music and our freedom songs, songs that carry messages of social awareness that we want to share. We perform on and off campus, and tour around the US and beyond. <a href='mailto:rockapellas@dartmouth.edu'>Write to us</a> if you are interested in having the Rocks at your event or want to snag one of our CDs!
+			<p>Welcome! The Rockapellas are an all-female a capella group from Dartmouth College. Since 1989, the Rocks have entertained audiences with our exciting repertoire of popular music and our freedom songs, songs that carry messages of social awareness that we want to share. We perform on and off campus, and tour around the US and beyond. <a href='mailto:rockapellas@dartmouth.edu' target='_blank'>Write to us</a> if you are interested in having the Rocks at your event or want to snag one of our CDs!
 			</p>
 			<span></span>
 		</div>
@@ -114,7 +114,7 @@
 			<section id='cd'>
 				<h1>Live Free</h1>
 				<img src='images/albums/livefree.jpeg' alt='Live Free'>
-				<p><a href='mailto:rockapellas@dartmouth.edu'>Email us</a> to purchase Live Free, our newest album!</a></p>
+				<p><a href='mailto:rockapellas@dartmouth.edu' target='_blank'>Email us</a> to purchase Live Free, our newest album!</a></p>
 			</section>
 			
 		</div>
