--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			</section>
 			
 			<section id='upcoming'>
-				<h1>Upcoming</h1>
+				<h1>Upcoming Events</h1>
 				<ul>
 					<li><h2>Spalding Show</h2><p>9/8 11pm Spalding Auditorium</p></li>
 					<li><h2>Ice Cream Social</h2><p>9/9 1pm Rocky Overhang</p></li>
