--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	
 	<div id='social'>
 		<h1>Find us on:</h1>
-		<a href='https://www.facebook.com/pages/Dartmouth-Rockapellas/130681392191s' target='_blank'><img src='images/Facebook.png'></a>
+		<a href='https://www.facebook.com/pages/Dartmouth-Rockapellas/130681392191' target='_blank'><img src='images/Facebook.png'></a>
 		<a href='https://twitter.com/Rockapellas' target='_blank'><img src='images/Twitter.png'></a>
 		<a href='http://www.youtube.com/user/DartmouthRockapellas' target='_blank'><img src='images/Youtube.png'></a>
 	</div>
@@ -90,7 +90,7 @@
 		</div>
 		
 		<div class='about'>
-			<p>Welcome! The Rockapellas are an all-female a capella group from Dartmouth College. Since 1989, the Rocks have entertained audiences with our exciting repertoire of popular music and our freedom songs, songs that carry messages of social awareness that we want to share. We perform on and off campus, and tour around the US and beyond. <a href='mailto:rockapellas@dartmouth.edu' target='_blank'>Write to us</a> if you are interested in having the Rocks at your event or want to snag one of our CDs!
+			<p>Welcome! The Rockapellas are an all-female a capella group from Dartmouth College. Since 1989, the Rocks have entertained audiences with our exciting repertoire of popular music and our freedom songs, songs that carry messages of social awareness that we want to share. We perform on and off campus, and tour around the US and beyond. <a href='mailto:rockapellas@dartmouth.edu' target='_blank'>Write to us</a> if you are interested in having the Rocks sing at your event or want to snag one of our CDs!
 			</p>
 			<span></span>
 		</div>
