--- a/videos.html
+++ b/videos.html
@@ -87,7 +87,7 @@
 				<h1> Ella's Song</h1>
 				<br>
 				</section>
-				<iframe width="450" height="350" src="http://www.youtube.com/embed/fDv84OviVjM?list=PL4BAF7EC524048646&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>			
+				<iframe width="450" height="350" src="http://www.youtube.com/embed/fDv84OviVjM" frameborder="0" allowfullscreen></iframe>		
 			</li> 
 			
 			<li class='video'>
