--- a/videos.html
+++ b/videos.html
@@ -136,7 +136,7 @@
 			</ul>	
 		
 		<div id='space'></div>
-		<div id='more'><a href='#'>Check out more videos on our YouTube channel!</a></div>
+		<div id='more'><a href='http://www.youtube.com/user/DartmouthRockapellas'>Check out more videos on our YouTube channel!</a></div>
 		
 	</div>	
 	
