--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<a class="logo" href="/"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
 		<nav id='primary'>
 			<ul>
-				<li><a href='index.html'>Home</a></li>
+				<li id='first'><a href='index.html'>Home</a></li>
 				<li><a href='members.html'>Members</a></li>
 				<li><a href='history.html'>History</a></li>
 				<li><a href='videos.html'>Videos</a></li>
