--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<li><a href='history.html'>History</a></li>
 				<li><a href='videos.html'>Videos</a></li>
 				<li><a href='music.html'>Music</a></li>
-				<li><a href='contact.html'>Contact Us</a></li>
+				<li><a href='contact.html'>Contact</a></li>
 			</ul>
 		</nav>
 				
