--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<section id='upcoming'>
 				<h1>Upcoming Events</h1>
 				<ul>
-					<li><h2>Spalding Show</h2><p>9/8 11pm Spalding Auditorium</p></li>
+					<li><h2>Spalding Show</h2><p>9/8 11pm Spaulding Auditorium</p></li>
 					<li><h2>Ice Cream Social</h2><p>9/9 1pm Rocky Overhang</p></li>
 					<li><h2>Fahey Show</h2><p>9/12 TBA Fahey Common Room</p></li>
 					<li><h2>Auditions</h2><p>9/15 9am Dartmouth Hall </p></li>
