--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</div>
 	
 	<header>
-		<a class="logo" href="/"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
+		<a class="logo" href="index.html"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
 		<nav id='primary'>
 			<ul>
 				<li id='first'><a href='index.html'>Home</a></li>
@@ -100,17 +100,18 @@
 		
 		<div class='announcement'>
 			<section id='sixteens'>
-				<h1>Calling all '16s!</h1>
-				<p>If you're interested in singing and social justice, come audition for the Rockapellas! Auditions will be held Saturday, September 15th in Dartmouth Hall - please prepare a verse and chorus of a song that shows off your voice.  We can't wait to hear this new class of singers!</p>
+				<h1>Congratulations Pebbles!</h1>
+				<img src='images/pebbles.jpeg' alt='Pebbles'>
+				<p>We're so excited to welcome Nkenna, Jordana, and Carolina to the family!  Check out our <a href='members.html'>members page</a> to learn more about them.</p>
 			</section>
 			
 			<section id='upcoming'>
 				<h1>Upcoming Events</h1>
 				<ul>
-					<li><h2>Spalding Show</h2><p>9/8 11pm Spaulding Auditorium</p></li>
-					<li><h2>Ice Cream Social</h2><p>9/9 1pm Rocky Overhang</p></li>
-					<li><h2>Fahey Show</h2><p>9/12 TBA Fahey Common Room</p></li>
-					<li><h2>Auditions</h2><p>9/15 9am Dartmouth Hall </p></li>
+					<li><h2>Joint show with MIT Logs</h2><p>10/5 Location and Time TBD</p></li>
+					<li><h2>Benefit for Burma</h2><p>10/18 7:30pm</p></li>
+					<li><h2>Pebble Show</h2><p>Stay tuned!</p></li>
+					<li><h2>Nepal Tour</h2><p>11/27 - 12/7</p></li>
 				</ul>
 			</section>
 			
