--- a/members.html
+++ b/members.html
@@ -74,7 +74,7 @@
 	</div>
 
 	<header>
-		<a class="logo" href="/"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
+		<a class="logo" href="index.html"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
 		<nav id='primary'>
 			<ul>
 				<li><a href='index.html'>Home</a></li>
@@ -187,6 +187,14 @@
 						<div class="name" style='display:none;'><p>Meredith Shaw '15</p></div>
 					</div>
 					</a>
+
+					<a class="fancybox" href="#Nkenna">
+					<div class="individual">
+						<img src='images/members/Nkenna_bw.jpeg'>
+						<img class='color' style='display:none;' src='images/members/Nkenna.png'>
+						<div class="name" style='display:none;'><p>Nkenna Ibeakanma '16</p></div>
+					</div>
+					</a>
 					
 		
 			</section>		
@@ -280,6 +288,16 @@
 	<h3>Charli "Hoox" Fool Bear '15</h3>
 	<br>
 	<p>Charli is from good ol’ North Dakota, where she lived on the Standing Rock Sioux Reservation. She likes food (like pizza and popcorn,) nice people, beach balls, musicals, and obnoxious hair colors. A Harry Potter fanatic and a lazy bum, she can often be found laying on her beloved bed in The River (stay classy), yelling ‘Accio!’ at objects no more than four feet away from her. She wants to major in government and English with a possible minor in Woman and Gender Studies. She’s also positive she's a Hufflepuff and Lady Gaga’s long-lost sister. Charli is addicted to slushies and any variation of them.</p>
+</div>
+
+<div id="Nkenna" class="fancymembers" style="width:650px;display: none;">
+	<img alt="Nkenna" src="images/members/Nkenna.png" align="right"/>
+	<h3>Nkenna "Bazz" Ibeakanma '16</h3>
+	<br>
+	<p>Nkenna hails from London.  When she's not drinking tea and
+	eating biscuits, you can find Nkenna watching Friends, dancing
+	to African music, or doing nothing.  She is a potential econ
+	major and potential non-econ major. </p>
 </div>
 	
 </body>
