--- a/music.html
+++ b/music.html
@@ -70,7 +70,7 @@
 	</div>
 
 	<header>
-		<a class="logo" href="/"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
+		<a class="logo" href="index.html"><img src="images/logo.png" alt="The Dartmouth Rockapellas"></a>
 		<nav id='primary'>
 			<ul>
 				<li><a href='index.html'>Home</a></li>
